--- a/MVCClient/Views/Home/Index.cshtml
+++ b/MVCClient/Views/Home/Index.cshtml
@@ -29,3 +29,8 @@
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
+
+<div>
+
+    @Html.ActionLink("Test API", "TestAPI", "Home", null, new { @class = "btn btn-default" })
+</div>
