Working AuthorizationCode flow.

--- a/MVCClient/Views/Home/Index.cshtml
+++ b/MVCClient/Views/Home/Index.cshtml
@@ -33,4 +33,6 @@
 <div>
 
     @Html.ActionLink("Test API", "TestAPI", "Home", null, new { @class = "btn btn-default" })
+
+    @Html.ActionLink("Test API", "TestAPIAuthorizationCode", "Home", null, new { @class = "btn btn-default" })
 </div>
